fix mobile layout issues

--- a/pages/global.css
+++ b/pages/global.css
@@ -9,7 +9,7 @@ html{
     color: #eee;
 }
 body{
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
 
     /* background: linear-gradient(
@@ -35,11 +35,11 @@ img{
     width: 100%
 }
 .container{
-    width: 90%;
-    max-width: 120rem;
+    /* width: 90%; */
+    /* max-width: 120rem; */
     height: 100%;
-    margin: 0 auto;
-    position: relative;
+    /* margin: 0 auto; */
+    /* position: relative; */
 } 
 .section-heading{
     text-align: center;
